<resources>
    <string name="app_name">GMMFestiLoc</string>

    <string name="mapbox">Mapbox</string>
    <string name="menu_examplemaps">Example Maps</string>
    <string name="reportBugs">Report Bugs</string>

    <!-- Map Labels -->
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="street">Street</string>
    <string name="outdoors">Outdoors</string>
    <string name="woodcut">Woodcut</string>
    <string name="pencil">Pencil</string>
    <string name="spaceShip">Space Ship</string>

    <!-- Map Ids -->
    <string name="satelliteMapId">brunosan.map-cyglrrfu</string>
    <string name="terrainMapId">examples.map-zgrqqx0w</string>
    <string name="streetMapId">examples.map-i87786ca</string>
    <string name="outdoorsMapId">examples.ik7djhcc</string>
    <string name="woodcutMapId">examples.xqwfusor</string>
    <string name="pencilMapId">examples.a4c252ab</string>
    <string name="spaceShipMapId">examples.3hqcl3di</string>

    <!-- Access Token -->
    <string name="testAccessToken">sk.eyJ1IjoibG9jbzg5IiwiYSI6IjZhNTg3ZThlNzVjOTc3YTM4MDMzMjZjOTY3M2EyMmRlIn0.KJJV-izboVpIW8aDuC5kPQ</string>
    <string name="title_activity_maps">Map</string>


    <string name="main_fragment">Startseite</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">search for location</string>
    <string name="action_compose">Compose</string>
    <string name="action_add">add location</string>
    <string name="action_more">Submenu</string>
    <string name="action_location_search">zoom to current location</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_spielplan">Spielplan</string>
    <string name="action_gelaendeplan">Geländeplan</string>
    <string name="action_wetter">Wetter</string>

    <item name="btnActTwo" type="id" />
    <item name="btnActThree" type="id" />
    <item name="btnActSpiel" type="id" />
    <item name="btnActMap" type="id" />
    <item name="btnActLocation" type="id" />

    <string name="test">Filter</string>

    <string name="hello_world">Hello world!</string>

    <string name="provider_gps">GPS</string>
    <string name="provider_network">Network</string>
    <string name="location_settings">Location settings</string>

    <string name="text_tab1">Bands</string>
    <string name="text_tab2">Spielplan</string>
    <string name="text_tab3">Geländeplan</string>
    <string name="text_tab_header">Menu</string>


    <string name="text_activity1">First Activity</string>
    <string name="text_activity2">Second Activity</string>

    <string name="text_tab">Created with LayoutInflater </string>

    <string name="item1">Item1</string>
    <string name="item2">Item2</string>
    <string name="item3">Item3</string>
    <string name="item4">Item4</string>
    <string name="title_activity_google_maps">Map</string>


</resources>
