<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_maptypes"
        android:title="@string/menu_examplemaps"
        mapbox:showAsAction="always"
        mapbox:actionProviderClass="de.anwendung.xenia.mapboxexample.MainActivityActionProvider"/>

    <item android:id="@+id/action_settings"
    android:title="@string/action_settings"
    android:orderInCategory="100"
    app:showAsAction="never" />

    <item
        android:id="@+id/item1"
        app:showAsAction="always"
        android:title="@string/item1">
    </item>
    <item
        android:id="@+id/item2"
        android:icon="@android:drawable/ic_menu_call"
        app:showAsAction="ifRoom"
        android:title="@string/item2">
    </item>
    <item
        android:id="@+id/item3"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="ifRoom|withText"
        android:title="@string/item3">
    </item>
    <item
        android:id="@+id/item4"
        android:icon="@android:drawable/ic_menu_view"
        app:showAsAction="never"
        android:title="@string/item4">
    </item>

</menu>
